# job_scheduler

./: .gitignore  Cargo.toml  README.md  compose.yaml  config.template.yaml  prometheus.yaml
api_server/: Cargo.toml
api_server/src/: app.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs
api_server/src/db/: config.rs  connection.rs  mod.rs  models.rs  queries.rs
api_server/tests/: db_tests.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
master/src/: main.rs
migrations/: 0001_create_jobs_table.sql  0001_create_tasks_table.sql  0003_add_indexes.sql  0004_add_run_mode_and_cron_expression_to_jobs_table.sql  0004_create_failed_jobs_table.sql  0007_add_run_at_column_in_jobs_table.sql
monitoring/grafana/dashboards/: dashboard.json
monitoring/grafana/provisioning/datasources/: datasources.yaml
server/: Cargo.toml
server/src/: app.rs  background.rs  cleanup.rs  error.rs  handlers.rs  helper.rs  lease_recovery.rs  lib.rs  main.rs  prometheus.rs
server/src/db/: models.rs  queries.rs
server/tests/: api_tests.rs  db_tests.rs  test_server.rs
shared/: Cargo.toml
shared/src/: config.rs
shared/src/db/: connection.rs  models.rs  queries.rs
shared/tests/: db_query_tests.rs
test_fixtures/: invalid_jobs.sql  jobs.sql
worker/: Cargo.toml
worker/src/: background.rs  error.rs  executor.rs  heartbeat.rs  lib.rs  main.rs  prometheus.rs  state.rs
worker/src/db/: queries.rs
worker/src/handlers/: email.rs  mod.rs  models.rs  webhook.rs
worker/tests/: query_tests.rs
worker_supervisor/: Cargo.toml
worker_supervisor/src/: main.rs
