[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }

chrono = { workspace = true }
prometheus-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

anyhow = "1.0.102"
lettre = { version = "0.11.19", features = ["tokio1", "tokio1-native-tls"] }
